完成了首页功能的开发

--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@
     <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入jqurey -->
     <script src="/assets/lib/jquery.js"></script>
-    <script src="/assets/js/login.js"></script>
+    <script src="/assets/js/baseAPI.js"></script>
     <!--导入自己的脚本 -->
     <script src="/assets/js/login.js"></script>
 </body>
